# bitboard

./: CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  addReplaceCommand_8cpp.html  all_2.js  all_5.js  all_a.js  annotated.html  bitBoards.h  bitBoards_8h.html  bitBoards_8h_source.html  bitwise_8cpp.html  calculateMovesSliding_8cpp.html  calculateRange_8cpp.html  changelog.md.bak  classes.html  dir_62bb68798de2760fa22fe047425f9f6d.html  dir_79ea79b3cf7213729ef61baf73b0bd99.html  files.html  files_1.js  files_2.js  functions_0.js  functions_3.js  functions_7.js  globals.html  globals_func.html  index.html  indices_8cpp.html  main.cpp  main_8cpp.html  md_CHANGELOG.html  md_README.html  md__2home_2deman_2cpp_2cs135_2bitboard_2CHANGELOG.html  moveCommand_8cpp.html  moveKing_8cpp.html  movePawn_8cpp.html  moveQueen_8cpp.html  pages.html  pages_1.js  (+5 more)
docs/: FEN_8cpp.html  addReplaceCommand_8cpp.html  all_0.js  all_2.js  all_5.js  all_6.js  all_8.js  all_a.js  all_b.js  bitBoards_8h.html  bitBoards_8h_source.html  bitwise_8cpp.html  calculateMovesSliding_8cpp.html  calculateRange_8cpp.html  dir_62bb68798de2760fa22fe047425f9f6d.html  dir_b920f6774498e4cdce76349f5142b3d8.html  files.html  files_0.js  files_1.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  globals.html  globals_func.html  indices_8cpp.html  jquery.js  main_8cpp.html  md__2home_2deman_2cpp_2cs135_2bitboard_2CHANGELOG.html  md__2home_2deman_2cpp_2cs135_2bitboard_2README.html  menudata.js  moveBishop_8cpp.html  moveCommand_8cpp.html  moveKing_8cpp.html  (+9 more)
docs/search/: all_2.js  all_3.js  all_5.js  all_6.js  all_a.js  classes_0.js  files_2.js  files_3.js  files_5.js  files_6.js  files_7.js  functions_1.js  functions_2.js  (+7 more)
functions/: addPiece.cpp  coordinateIndex.cpp  couldGo.cpp  pieceSearch.cpp  printBitBoard.cpp  removePiece.cpp
html/: addReplaceCommand_8cpp.html  all_4.js  all_6.js  all_8.js  annotated.html  bitBoards_8h.html  bitBoards_8h_source.html  bitwise_8cpp.html  calculateRange_8cpp.html  classes_0.js  dir_62bb68798de2760fa22fe047425f9f6d.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  files_3.js  files_6.js  files_7.js  functions_1.js  functions_4.js  functions_5.js  functions_6.js  globals_func.html  indices_8cpp.html  main_8cpp.html  moveBishop_8cpp.html  moveKing_8cpp.html  moveKnight_8cpp.html  movePawn_8cpp.html  moveRook_8cpp.html  pages.html  pages_0.js  printBitBoard_8cpp.html  structChessBoard-members.html
include/: bitBoards.h
search/: all_2.js  all_6.js  all_7.js  files_2.js  searchdata.js
source/: FEN.cpp  addPiece.cpp  addReplaceCommand.cpp  bitwise.cpp  calculateMovesDiagonal.cpp  calculateMovesHelper.cpp  calculateMovesHorizontal.cpp  calculateMovesSliding.cpp  calculateMovesVertical.cpp  calculateRange.cpp  coordinateIndex.cpp  fenCommand.cpp  fenDecode.cpp  fenEncode.cpp  indices.cpp  main.cpp  moveBishop.cpp  moveCommand.cpp  moveKing.cpp  moveKnight.cpp  movePawn.cpp  moveQueen.cpp  moveRook.cpp  pieceSearch.cpp  printAllMoves.cpp  printBitBoard.cpp  printVector.cpp  rank_and_file.cpp  sideInfluence.cpp  squareSearch.cpp  subtractPiece.cpp
test/: movementRules.md
(+10 files in other folders)
